--- a/spring-batch-demo/pom.xml
+++ b/spring-batch-demo/pom.xml
@@ -47,6 +47,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-core</artifactId>
+			<!-- <version>4.3.7.RELEASE</version> -->
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -64,4 +69,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<packaging>war</packaging>
 </project>
